--- a/task-mgr/Cargo.toml
+++ b/task-mgr/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
+serde = "1.0.219"
+serde_derive = "1.0.219"
+serde_json = "1.0.143"
+tempfile = "3.21.0"
+ulid = { version = "1.2.1", features = ["serde"] }
 uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
