--- a/task-mgr/Cargo.toml
+++ b/task-mgr/Cargo.toml
@@ -9,5 +9,7 @@ serde = "1.0.219"
 serde_derive = "1.0.219"
 serde_json = "1.0.143"
 tempfile = "3.21.0"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 ulid = { version = "1.2.1", features = ["serde"] }
 uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
