--- a/task-mgr/Cargo.toml
+++ b/task-mgr/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 clap = { version = "4.5.46", features = ["derive"] }
+rstest = "0.26.1"
 serde = "1.0.219"
 serde_derive = "1.0.219"
 serde_json = "1.0.143"
