--- a/task-mgr/Cargo.toml
+++ b/task-mgr/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 clap = { version = "4.5.46", features = ["derive"] }
-rstest = "0.26.1"
-serde = "1.0.219"
-serde_derive = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 tempfile = "3.21.0"
 thiserror = "2.0.16"
 tracing = "0.1.41"
+tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 ulid = { version = "1.2.1", features = ["serde"] }
-uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
+
+[dev-dependencies]
+rstest = "0.26.1"
