--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.99"
+atoi = "2.0.0"
+bytes = "1.10.1"
 tokio = { version = "1.47.1", features = ["full"] }
 
 [dev-dependencies]
